--- a/style.css
+++ b/style.css
@@ -1,4 +1,59 @@
-body{
+
+@import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@600&family=Poppins:wght@300&display=swap');
+* {
+  padding: 0;
+  margin: 0;
+    font-family: 'Poppins',sans-serif;
+
+}
+.main {
+  background-image: url(assets/bg.jpg);
+  background-position: center center;
+  background-size: max(1200px, 100vw);
+  background-repeat: no-repeat;
+  height: 80vh;
+  position: relative;
+}
+.main .box {
+  height: 80vh;
+  width: 100%;
+  opacity: 0.44;
+  background-color: black;
+  position: absolute;
+  top: 0;
+}
+nav {
+  max-width: 60vw;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 62px;
+}
+nav img{
+    color: red;
+    width: 114px;
+    position: relative;
+    z-index: 10;
+
+}
+nav button{
+    position: relative;
+    z-index: 10;
+}
+.hero{
+  font-family: 'Martel Sans', sans-serif;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: white;
+  position: relative;
+}
+
+
+/* body{
     margin: 0;
     padding: 0;
     font-family: Arial,'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;   
@@ -35,7 +90,7 @@ nav{
     color:white;
     cursor: pointer;
 }
-/* Tablets Desktop */
+/* Tablets Desktop
 @media(min-width:768px){
     .menu{
         display: flex;
@@ -47,4 +102,4 @@ nav{
     .hamburger{
         display: none;
     }
-}
+} */
